--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0" />
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.0/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="http://localhost:8080/index.js"></script>
+    <script type="text/javascript" src="/index.js"></script>
+
+    <link rel=”icon” type=”image/png” href=”/assets/favicon.png” />
 	</head>
 	<body>
   
