--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.0/css/bootstrap.min.css" />
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.0/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/index.js"></script>
 
     <link rel=”icon” type=”image/png” href=”/assets/favicon.png” />
 	</head>
@@ -29,12 +28,12 @@
 		</div>
 
 		<div class="containter">
-			<div class="form">
+			<form class="form" action="/back" method="GET">
 				<div class="form-group row">
-					<label class="col-form-label col-sm-4" style="text-align: right;">search:</label><div class="col-sm-4"><input type="text" id="input" class="form-control"></input></div>
+					<label class="col-form-label col-sm-4" style="text-align: right;">search:</label><div class="col-sm-4"><input name="search" type="text" id="input" class="form-control"></input></div>
 						<button type="submit" class="btn btn-primary" id="submit">submit</button>
 				</div>
-			</div>
+			</form>
 		</div>
 
 		<div class="container" id="output">
@@ -42,16 +41,16 @@
 		</div>
 	</body>
 
-	<script>
+	<script>/*
 		$('#submit').on('click', function(event){
 			$.ajax({
-				'type': 'GET',
-				'url': '/back',
-				'data': { input: $('#input').val },
+				'type': 'POST',
+        'url' : './back',
+				'data': '2'/* { input: $('#input').val },
 				'success': function(data){
 					$('#output').text = data.input;
 				}
 			});
-		});
+		});*/
 	</script>
 </html>
