add about cards

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 			.form {
 				display: none;
 			}
+
+			#about {
+				font-family: 'Comfortaa', cursive;
+			}
 		</style>
 	</head>
 	<body class="bg-dark">
@@ -53,6 +57,34 @@
 
 		<div class="container" id="output">
 
+		</div>
+
+		<div class="container text-light" id="about">
+			<div class="row justify-content-center">
+				<h1 style="font-size: 7em">About</h1>
+				<div class="container" id="cards">
+					<div class="row">
+
+						<div class="col-md">
+							<div class="card text-dark">
+								<div class="card-body">
+									<h2 class="card-title">Steven Borrego</h2>
+									<p>Lorem Ipsum</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md">
+								<div class="card text-dark">
+									<div class="card-body">
+										<h2 class="card-title">Yves Wienecke</h2>
+										<p>Lorem Ipsum</p>
+									</div>
+							</div>
+						</div>
+					</div>
+					</div>
+			</div>
 		</div>
 	</body>
 
