fix enter key but

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
 	<script>
     var showResult = function(data) {
         console.log(data);
+
         var o = '';
           for (var i = 0; i < data.length; i +=1) {
             o += '<div class="carousel-item';
@@ -163,7 +164,16 @@
        $('.carousel-inner').css("min-height", "20vw").css("min-width", "30vw");
        $('#columns').css('display', 'float');
        $('#output').css("display", 'float');
-      }
+      };
+
+    var noResult = function(data) {
+        console.log('no results');
+        $('#columns').css("min-height", "50vw").css("min-width", "100vw").css("margin-bottom", "5vh");
+        $('#columns').addClass('bg-alert');
+        $('#columns').css('display', 'float');
+
+        return;
+    };
 
 		$('#submit').on('click', function(event){
       console.log("in click event");
@@ -171,9 +181,10 @@
         'url' : '/submit',
 				'type': 'POST',
 				'data':  {option: $('#sel1').val(), input: $('#input').val() },
-				'success': showResult
+        'success': showResult,
+        'error': noResult
+        });
     });
-
 
     $('#input').on('keyup', function(event){
       console.log('in keyup event');
@@ -181,6 +192,5 @@
         $('#submit').click();
       }
     });
-	});
 	</script>
 </html>
