--- a/index.html
+++ b/index.html
@@ -182,12 +182,14 @@
                   o += '<h2 style="text-align: center; color: #DEDEDE;">';
                   o += '<a target="_blank" rel="noopener" href="' + data[i].url + '" style="color: #DEDEDE;">';
                   o += data[i].name + '</a><hr/></h2>';
-                  o += '<div style="width:100%">';
-                    o += '<div style="display: inline-block; margin-right: 5%;">'; 
+                  o += '<div style="width:100%; display: flex; flex-direction: row; justify-content: center;">';
+                    o += '<div style="margin-right: 5%;">'; 
                       o+= '<img style="border-radius: 3%;" src="' + data[i].image + '"/>';
                     o += '</div>'; 
-                    o += '<div style="display: inline-block; text-align: left;">'; 
-                      o += '<p style="color: #999;">Artists:&nbsp;&emsp;&emsp;&emsp;' + data[i].artists.join(', ');
+                    o += '<div style="text-align: left;">'; 
+                      o += '<p style="color: #999;">';
+                        o += 'Album:&nbsp;&emsp;&emsp;&emsp;' + data[i].album;
+                        o += '<br/>Artists:&nbsp;&emsp;&emsp;&emsp;' + data[i].artists.join(', ');
                         o += '<br/>Popularity:&nbsp;&emsp;' + data[i].popularity;
                       o+= '</p>';
                     o += '</div>'; 
