--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         $('#columns').css("min-height", "50vw").css("min-width", "100vw").css("margin-bottom", "5vh").css("background-color", "rgb(217,83,79)");
         $('#columns').html('<div class="container text-light" id="info"><div class="row justify-content-center" style="margin-top: 20vh"><h1 style="font-size: 5em">No Results</h1></div>');
         $('#columns').css('display', 'float');
-
+        $('#output').html('');
         return;
     };
 
