--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 				<h1 style="font-size: 7em; margin-top: 3%;">About</h1>
 				<div class="container" id="cards">
           <div style="margin: 5%;">
-            <h2>Synthesia is a peculiar medical condition that combines senses together.</h2><br/>
+            <h2>Synesthesia is a peculiar medical condition that combines senses together.</h2><br/>
             
             A person may:<br/>
             <ul>
